updated dark theme and added some new photos #1

--- a/_config.yml
+++ b/_config.yml
@@ -15,5 +15,9 @@ markdown: kramdown
 google_analytics: UA-106150678-1
 
 facebook: https://www.facebook.com/MetroCebuNorthForceBranchManulife/
-tel: +63323492495
+tel: +63.32.2319177
 info: info@metrocebunorthforce.com
+tel2: 0995.619.3639
+email2: boy_archie@manulife.com.ph
+
+addr: Keppel Tower, Cebu Business Park, Cebu City
