--- a/_config.yml
+++ b/_config.yml
@@ -20,4 +20,4 @@ info: info@metrocebunorthforce.com
 tel2: 0995.619.3639
 email2: boy_archie@manulife.com.ph
 
-addr: Keppel Tower, Cebu Business Park, Cebu City
+addr: Unit 101, Ground Floor Keppel Center, Samar Loop cor Cardinal Rosales Avenue, Cebu Business Park, Cebu City
