#15 initial contact page

--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,4 @@ tel2: 0995.619.3639
 email2: boy_archie@manulife.com.ph
 
 addr: Unit 101, Ground Floor Keppel Center, Samar Loop cor Cardinal Rosales Avenue, Cebu Business Park, Cebu City
+gmaps_api_key:
