--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
   name: git-gateway
 
+publish_mode: editorial_workflow
+
 media_folder: "images"
 collections:
   - name: "post" # Used in routes, e.g., /admin/collections/post
